<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:icon="@drawable/ic_launcherpsm"
        android:widgetLayout="@layout/round_more_icon"
        android:key="mobi.xperiacle.upsm.manager.MainActivity"
        android:summary="Add more applications to ultra power saving mode."
        android:title="UPSM Manager" />
    <PreferenceScreen
        android:icon="@drawable/ic_hexconverter"
        android:title="HexConverter"
        android:summary="Check or search a color for your Hexadecimal code..."
        android:widgetLayout="@layout/round_more_icon" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.hctrom.romcontrol"
            android:targetClass="com.hctrom.romcontrol.hexconverter.HexConverterMain"
            android:data="mydata" />
    </PreferenceScreen>
    <PreferenceScreen
        android:icon="@drawable/ic_dpichanger"
        android:title="DPI Changer"
        android:summary="Changes the density of the screen."
        android:widgetLayout="@layout/round_more_icon" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.hctrom.romcontrol"
            android:targetClass="com.hctrom.romcontrol.dpichanger.DPIActivity"
            android:data="mydata" />
    </PreferenceScreen>
    <PreferenceScreen
        android:icon="@drawable/ic_emoji"
        android:key="emojis_key"
        android:summary="Switch between different emojis for the system."
        android:title="Emojis"
        android:widgetLayout="@layout/round_more_icon" />
    <PreferenceScreen
        android:icon="@drawable/ic_toolbox"
        android:summary="Toolbox to access any app in a faster way."
        android:title="Toolbox"
        android:widgetLayout="@layout/round_more_icon" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.hctrom.romcontrol"
            android:targetClass="com.hctrom.romcontrol.toolboxsettings.ToolboxSettings"
            android:data="mydata" />
    </PreferenceScreen>
    <PreferenceScreen
        android:icon="@drawable/ic_omniswitch"
        android:summary="Advanced multitasking from OmniRom"
        android:title="OmniSwitch"
        android:widgetLayout="@layout/round_more_icon" >
        <intent
            android:icon="@drawable/ic_omniswitch"
            android:targetPackage="org.omnirom.omniswitch"
            android:targetClass="org.omnirom.omniswitch.SettingsActivity" />
    </PreferenceScreen>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="HCT OTA">
        <PreferenceScreen
            android:icon="@drawable/ic_ota"
            android:widgetLayout="@layout/round_more_icon"
            android:key="com.otaupdater.OTAUpdaterActivity"
            android:summary="Access our download area (ROM, Kernels, Zips...)"
            android:title="HCT OTA" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="AdBlocker">
        <CheckBoxPreference
            android:icon="@drawable/ic_adaway"
            android:key="hfm_disable_ads"
            android:title="@string/hfm_disable_ads_title"
            android:summaryOn="@string/hfm_disable_ads_summary_on"
            android:summaryOff="@string/hfm_disable_ads_summary_off"
            android:persistent="false" />
        <Preference
            android:key="hfm_update_hosts"
            android:title="@string/hfm_update_hosts"
            android:summary="@string/hfm_update_hosts_summary"
            android:dependency="hfm_disable_ads" />
        <PreferenceScreen
            android:title="Remove Domain Hosts"
            android:summary="You can delete a domain block list."
            android:dependency="hfm_disable_ads" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.hctrom.romcontrol"
                android:targetClass="com.hctrom.romcontrol.HostWhiteListView"
                android:data="mydata" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="Diagnostic">
        <PreferenceScreen
            android:icon="@drawable/ic_diagnostico"
            android:title="Diagnostic"
            android:summary="Displays and monitors the performance of various functions of the device (processor, battery, etc...)" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.hctrom.romcontrol"
                android:targetClass="com.hctrom.romcontrol.diagnostic.DiagnosticActivity"
                android:data="mydata" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="Faster GPS">
        <PreferenceScreen
            android:icon="@drawable/ic_fastergps"
            android:title="Faster GPS"
            android:summary="Configure your GPS optimally according to your location." >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.hctrom.romcontrol"
                android:targetClass="com.hctrom.romcontrol.fastergps.ui.BaseActivity"
                android:data="mydata" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="CatLog">
        <PreferenceScreen
            android:icon="@drawable/ic_catlog"
            android:title="CatLog"
            android:summary="Debug and find errors through logs." >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.hctrom.romcontrol"
                android:targetClass="com.hctrom.romcontrol.logcat.LogcatActivity"
                android:data="mydata" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="Build.prop Edit">
        <PreferenceScreen
            android:icon="@drawable/ic_buildpropeditor"
            android:key="build_prop"
            android:title="Build.prop Edit"
            android:summary="You can modify/add data to Build.prop. If you do not know what it is or that it serves, please do not change anything."
            android:widgetLayout="@layout/round_more_icon" />
    </PreferenceCategory>
</PreferenceScreen>